syntax = "proto3";

package urlshortener;

option go_package = "/url_shortener";

service UrlShortener {
  rpc ShortenURL (ShortenURLRequest) returns (ShortenURLResponse);
  rpc GetOriginalURL (GetOriginalURLRequest) returns (GetOriginalURLResponse);
}

message ShortenURLRequest {
  string original_url = 1;
}

message ShortenURLResponse {
  string shortened_url = 1;
}

message GetOriginalURLRequest {
  string shortened_url = 1;
}

message GetOriginalURLResponse {
  string original_url = 1;
}